--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,6 +1,8 @@
-name: Pull Request
+name: Format and Test
 
 on:
+  push:
+    branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
 
@@ -8,8 +10,8 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  test:
-    name: Test Suite
+  format-and-test:
+    name: Format and Test
     runs-on: ubuntu-latest
     
     steps:
@@ -51,29 +53,17 @@ jobs:
     - name: Run clippy
       run: cargo clippy --all-targets --all-features -- -D warnings
 
-    - name: Build
+    - name: Build project
       run: cargo build --verbose
 
-    - name: Run all tests
-      run: cargo test --verbose
+    - name: Run unit tests
+      run: cargo test --lib --verbose
+
+    - name: Run integration tests
+      run: cargo test --test integration --verbose
 
     - name: Run basic example test
       run: cargo test --test basic_example test_basic_example_behavior --verbose
 
-  # Quick security check for PRs
-  security-check:
-    name: Security Check
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
-
-    - name: Install cargo-audit
-      uses: taiki-e/install-action@cargo-audit
-
-    - name: Run security audit
-      run: cargo audit 
+    - name: Run doc tests
+      run: cargo test --doc --verbose 
