--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,21 @@
 repos:
-  - repo: https://github.com/doublify/pre-commit-rust
-    rev: v1.0
+  - repo: local
     hooks:
-      - id: fmt
+      - id: cargo-fmt
         name: cargo fmt
         description: Format Rust code with rustfmt
         entry: cargo fmt --all --
         language: system
         files: \.rs$
         pass_filenames: false
-      - id: clippy
+      - id: cargo-clippy
         name: cargo clippy
         description: Run clippy lints
         entry: cargo clippy --all-targets --all-features -- -D warnings
         language: system
         files: \.rs$
         pass_filenames: false
+        always_run: true
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
