--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ keywords = ["Spot", "TimeSeries", "AnomalyDetection"]
 include = [
     "src/**/*",
     "examples/**/*",
+    "tests/**/*",
+    "build.rs",
     "libspot/Makefile",
     "libspot/LICENSE.md",
     "libspot/README.md",
