--- a/crates/libspot/Cargo.toml
+++ b/crates/libspot/Cargo.toml
@@ -19,6 +19,7 @@ include = [
     "libspot/README.md",
     "libspot/src/**/*.c",
     "libspot/include/**/*.h",
+    "libspot/dist/**/*",
     "./README.md",
 ]
 
