--- a/crates/libspot-rs/Cargo.toml
+++ b/crates/libspot-rs/Cargo.toml
@@ -3,7 +3,7 @@ name = "libspot-rs"
 version = "0.1.0"
 edition = "2021"
 authors = ["Mathew Shen <datahonor@gmail.com>"]
-documentation = "https://docs.rs/crate/libspot"
+documentation = "https://docs.rs/libspot-rs"
 repository = "https://github.com/shenxiangzhuang/libspot-rs"
 readme = "README.md"
 license = "LGPL-3.0"
