--- a/crates/libspot/Cargo.toml
+++ b/crates/libspot/Cargo.toml
@@ -3,7 +3,7 @@ name = "libspot"
 version = "2.0.0-beta.6.0"
 edition = "2021"
 authors = ["Mathew Shen <datahonor@gmail.com>"]
-documentation = "https://docs.rs/crate/libspot-ffi"
+documentation = "https://docs.rs/libspot"
 repository = "https://github.com/shenxiangzhuang/libspot-rs"
 readme = "README.md"
 license = "LGPL-3.0"
