feat(libspot-rs): support model serialization and deserialization (#16)
* feat: support model serialization and deserialization

* change: serde as default

--- a/crates/libspot-rs/Cargo.toml
+++ b/crates/libspot-rs/Cargo.toml
@@ -19,8 +19,15 @@ include = [
     "./LICENSE",
 ]
 
+[features]
+default = ["serde"]
+serde = ["dep:serde"]
+
 [dependencies]
+serde = { version = "1.0", features = ["derive"], optional = true }
 
 [dev-dependencies]
 approx = "0.5.1"
 libc = "0.2"
+proptest = "1.5"
+serde_json = "1.0"
